logs/tagz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/hsaudiotag'...
Compiling './lib/python3.5/site-packages/hsaudiotag/id3v2.py'...
***   File "./lib/python3.5/site-packages/hsaudiotag/id3v2.py", line 28
    re_numeric_genre = re.compile(ur'^\(?(\d{1,3})')
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hsaudiotag/mp4.py'...
***   File "./lib/python3.5/site-packages/hsaudiotag/mp4.py", line 18
    re_atom_type = re.compile(ur'[A-Za-z0-9\-©]{4}')
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hsaudiotag-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybean-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tagz-0.0.12.egg-info'...
Compiling './lib/python3.5/site-packages/tagz.py'...
***   File "./lib/python3.5/site-packages/tagz.py", line 278
    print '%s - "%s" (%s)' % (tags.artist, tags.album, tags.path)
                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
